<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main_calc"
    android:background="@color/backgroundColor"
    android:textAlignment="textEnd">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:id="@+id/button1"
        android:layout_marginTop="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:singleLine="false"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_3"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_4"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_5"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_6"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_7"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_8"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_9"
        android:id="@+id/button9"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:background="@color/colorPrimary"
        android:layout_marginRight="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:id="@+id/button"
        android:textColor="@color/colorLight"
        android:background="#68a45a"
        android:layout_below="@+id/button13"
        android:layout_alignEnd="@+id/button13"
        android:layout_marginTop="23dp"
        android:layout_alignParentStart="true"
        android:onClick="calculate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/button10"
        android:layout_above="@+id/button6"
        android:layout_toEndOf="@+id/button3"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addOperation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/button11"
        android:layout_below="@+id/button3"
        android:layout_toEndOf="@+id/button6"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addOperation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi"
        android:id="@+id/button12"
        android:layout_alignTop="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorLight"
        android:onClick="addOperation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:id="@+id/button13"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLight"
        android:layout_below="@+id/button12"
        android:layout_toEndOf="@+id/button9"
        android:onClick="addOperation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView1"
        android:layout_above="@+id/button2"
        android:layout_alignTop="@+id/button14"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLight"
        android:gravity="center|end"
        android:paddingRight="20px"
        android:layout_marginBottom="5dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button10"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/button14"
        android:layout_toEndOf="@+id/textView1"
        android:layout_above="@+id/button3"
        android:layout_marginBottom="5dp"
        android:background="#be392a"
        android:textColor="@color/colorLight"
        android:onClick="clearField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_0"
        android:id="@+id/button0"
        android:layout_alignBottom="@+id/button13"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView1"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLight"
        android:onClick="addChar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="about"
        android:id="@+id/about_button"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/button13"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLight"
        android:onClick="showAbout" />

</RelativeLayout>
